--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <div class="header_content">
         <div class="header_logo">
           <img
-          src="./img/logon.png"
+          src="./img/logon3.png"
           alt="logo"
           class="header_logoImg">
         </div>
@@ -33,15 +33,25 @@
           <a href="#gallery" class="menu_item">Галерея</a>
           <a href="#" class="menu_item">Контакти</a>
         </div>
+        <nav class="burger">
+          <div class="burger_content">
+            <div class="burger_line"></div>
+            <div class="burger_line"></div>
+            <div class="burger_line"></div>
+          </div>
+        </nav>
       </div>
     </header>
     <section class="title">
-      <div class="title_photo">
-        <img
-          src="./img/image_title.png"
-          alt="#"
-          class="title_photo--img">
+      <div class="title_content">
+        <div class="title_photo">
+          <img
+            src="./img/image_title.png"
+            alt="#"
+            class="title_photo--img">
+        </div>
       </div>
+
     </section>
     <section class="directions" id="directions">
       <div class="directions_title">Напрямки</div>
