--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 <li class="menu_item">
                   <a
                     data-goto=".section_1"
-                    href="#title"
+                    href="#"
                     class="menu_link"
                   >
                     Наша студія
@@ -88,7 +88,7 @@
           <div class="title_content">
             <div class="title_photo">
               <img
-                src="./img/image_title.png"
+                src="./img/image_title2.png"
                 alt="#"
                 class="title_photo--img">
             </div>
