--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,12 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&family=Bebas+Neue&family=Mulish:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&family=Bebas+Neue&family=Mulish:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   </head>
   <body>
@@ -50,15 +54,6 @@
                 </li>
                 <li class="menu_item">
                   <a
-                    data-goto=".section_3"
-                    href="#"
-                    class="menu_link"
-                  >
-                    Відео-майстеркласи
-                  </a>
-                </li>
-                <li class="menu_item">
-                  <a
                     data-goto=".section_4"
                     href="#gallery"
                     class="menu_link"
@@ -69,6 +64,15 @@
                 <li class="menu_item">
                   <a
                     data-goto=".section_5"
+                    href="#master_class"
+                    class="menu_link"
+                  >
+                    Відео-майстеркласи
+                  </a>
+                </li>
+                <li class="menu_item">
+                  <a
+                    data-goto=".section_6"
                     href="#"
                     class="menu_link"
                   >
@@ -773,6 +777,61 @@
                   <div class="swiper-button-prev"></div>
                   <div class="swiper-pagination"></div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="master_class section_5" id="master_class">
+          <div class="master_class__container">
+            <div class="master_class__title">Відео-майстеркласи</div>
+            <div class="master_class__content">
+              <div class="master_class__video">
+                <iframe
+                  class="master_class__video_Ytube"
+                  width="100%"
+                  height="450"
+                  src="https://www.youtube.com/embed/Kd4gkVpJ_LE"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen>
+                </iframe>
+              </div>
+              <div class="master_class__video">
+                <iframe
+                  class="master_class__video_Ytube"
+                  width="100%" 
+                  height="450" 
+                  src="https://www.youtube.com/embed/kMVeAlyXu5Y" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen>
+                </iframe>
+              </div>
+              <div class="master_class__video">
+                <iframe
+                  class="master_class__video_Ytube"
+                  width="100%" 
+                  height="450" 
+                  src="https://www.youtube.com/embed/JoiRs3vWNu0" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+                </iframe>
+              </div>
+              <div class="master_class__video">
+                <iframe 
+                  class="master_class__video_Ytube"
+                  width="100%" 
+                  height="450" 
+                  src="https://www.youtube.com/embed/IPh2LIT1NfU" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                  allowfullscreen>
+                </iframe>
               </div>
             </div>
           </div>
