--- a/src/index.html
+++ b/src/index.html
@@ -783,52 +783,57 @@
         </section>
         <section class="master_class section_5" id="master_class">
           <div class="master_class__container">
-            <div class="master_class__title">Відео-майстеркласи</div>
+            <div class="master_class__title">
+              <p>Відео-майстеркласи</p>
+            </div>
             <div class="master_class__content">
               <div class="master_class__video">
+                <p class="master_class__video-title">Адвент календар</p>
                 <iframe
                   class="master_class__video_Ytube"
                   width="100%"
                   height="450"
                   src="https://www.youtube.com/embed/Kd4gkVpJ_LE"
                   title="YouTube video player"
-                  frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   allowfullscreen>
                 </iframe>
               </div>
               <div class="master_class__video">
+                <p class="master_class__video-title">Новорічний декор</p>
                 <iframe
                   class="master_class__video_Ytube"
                   width="100%" 
                   height="450" 
                   src="https://www.youtube.com/embed/kMVeAlyXu5Y" 
                   title="YouTube video player" 
-                  frameborder="0" 
+
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                   allowfullscreen>
                 </iframe>
               </div>
               <div class="master_class__video">
+                <p class="master_class__video-title">Котик-жиробас</p>
                 <iframe
                   class="master_class__video_Ytube"
                   width="100%" 
                   height="450" 
                   src="https://www.youtube.com/embed/JoiRs3vWNu0" 
                   title="YouTube video player" 
-                  frameborder="0" 
+
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   allowfullscreen>
                 </iframe>
               </div>
               <div class="master_class__video">
+                <p class="master_class__video-title">KIDS ART</p>
                 <iframe 
                   class="master_class__video_Ytube"
                   width="100%" 
                   height="450" 
                   src="https://www.youtube.com/embed/IPh2LIT1NfU" 
                   title="YouTube video player" 
-                  frameborder="0" 
+
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                   allowfullscreen>
                 </iframe>
